# auto_report_illegal_car

./: .gitignore
api/: .gitignore  main.py  mcp.json.example  pyproject.toml
api/config/: __init__.py  config.py
api/routers/: __init__.py  health.py  report.py
api/services/: __init__.py  file_service.py  mcp_service.py  report_service.py
black_box/: main.py  test_fps.py
blackbox-demo/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
file_upload_server/: main.py  pyproject.toml  test_upload.py
mcp_client/: README.md  main.py  mcp.json  pyproject.toml  report_test.py
mcp_server_test/: pyproject.toml  report.py  server.py
test/: browser-use-cdp_example.py  pyproject.toml
vehicle_report/: geocoding.py  main.py  report.py
