[project]
name = "auto_report_api"
version = "0.1.0"
description = "Auto Report API with Anthropic"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "load-dotenv>=0.1.0",
    "langchain>=0.3.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_client"]

[tool.hatch.build.targets.wheel.sources]
"." = "mcp_client"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  __pycache__
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "invalid-name",
    "too-few-public-methods",
    "line-too-long"
]

[tool.pylint.format]
max-line-length = 88

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
